--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "040d1834-f38b-4f45-a436-19b9da0e3da9"
 authors = ["Jonathan Miller jonathan.miller@fieldofnodes.com"]
 version = "1.0.0-DEV"
 
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
 [compat]
 julia = "1.6.7"
 
